deployments/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: go-s3-sharing
  labels:
    name: go-s3-sharing
